fixing dropdown menu on mobile version in media query

--- a/styles/style.css
+++ b/styles/style.css
@@ -71,14 +71,13 @@ nav a:hover {
   .dropdown {
     position: relative;
     display: inline-block;
-    width: 300px;
+    width: 15%;
   }
   
   /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
     display: none;
     position: absolute;
-    margin-left: 60px;
     background-color: #D5A021;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -400,14 +399,18 @@ footer h3 a:hover {
         display: block;
         padding: 10px;
     }
+    .dropbtn{
+        text-align: center;
+        transform: translate(160%,0);
+    }
     .dropdown-content {
         display: none;
         position: absolute;
-        margin-left: 60px;
         background-color: #D5A021;
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1;
+        transform: translate(120%,0);
       }
     .HolesAreBad, .HeadCounter, .SQL { 
         margin: 50px auto;
